Upcoming:
- Fixed shape calculation for connectors so that they are more accurate

1.20-6.0.1:
- Fixed a bug with rendering (cable outlines)

1.20-6.0.0:
- Port to 1.20

1.19-5.1.4:
- Update to 1.19.4

1.19-5.1.3:
- Fixed a problem with fluid filters which would cause crashes if it wasn't a valid bucket item to filter on
- Pasting to an advanced connector with a direction different from default would not correctly set that direction

1.19-5.1.2:
- Big improvements to the routing and wireless routing in general. It should now start and stop much quicker if something changes and it will also respect the fact that a channel is disabled

1.19-5.1.1:
- Added facade to the creative tab
- Fixed a server-side crash with facades on 1.19.3. Make sure to update McJtyLib too

1.19-5.1.0:
- Updated to Latest McJtyLib and made compatible with 1.19.3

1.19-5.0.2:
- Bugfix by StevenDoesStuffs so that the filter on fluid extraction works again

1.19-5.0.1:
- You can again change the side of an advanced connector (in the gui)

1.19-5.0.0:
- Port to 1.19

1.18-4.0.5:
- Port to 1.18.2

1.18-4.0.4:
- Copy/paste will now use a more compact json so that more can be copied before hitting the limit
- New system to automatically split the copy/paste packet from client to server in case of huge networks. Can be disabled by setting the client config controllerMaxPaste to a value like 28000

1.18-4.0.3:
- Fixed a problem with items not getting restored when breaking and placing blocks

1.18-4.0.2:
- Fixed a problem with XNet networks not working below 0. Networks should be automatically upgraded to being below 0 compatible

1.18-4.0.1:
- Updates for McJtyLib and fixes

1.18-4.0.0:
- First release of XNet for 1.18

1.16-3.0.15:
- Updated to latest version of McJtyLib

1.16-3.0.14:
- Updated to latest version of McJtyLib

1.16-3.0.13:
- XNet cables and connectors can now be waterlogged and cables no longer break in water

1.16-3.0.12:
- Fix the item model for the yellow connector

1.16-3.0.11: