@@ -1,7 +1,7 @@
 {
   "name": "Multiple Networks",
   "description": "Connecting multiple networks with a Router",
-  "parent": "xnet:category_xnet",
+  "parent": "rftoolsbase:category_xnet",
   "icon": "xnet:router",
   "sortnum": 20
 }
