@@ -1,7 +1,7 @@
 {
   "name": "Cables",
   "icon": "xnet:netcable_red",
-  "category": "xnet:category_xnet_simple",
+  "category": "rftoolsbase:category_xnet_simple",
   "sortnum": 20,
   "pages": [
     {
