@@ -1,5 +1,6 @@
 Upcoming:
 - Fixed shape calculation for connectors so that they are more accurate
+- Fixed patchouli integration
 
 1.20-6.0.1:
 - Fixed a bug with rendering (cable outlines)
